# ssi-backend

./: .dockerignore  .env.development  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  build-prod.bat  build-prod.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.prod.sh  mypy.ini  pyproject.toml  sent-service-data-with-sse.md  status_test.html
authentication/: adapters.py  decorators.py  middleware.py  serializers.py  urls.py  views.py
core/: admin.py  apps.py  authentication.py  consumers.py  models.py  receivers.py  routing.py  serializers.py  signals.py  urls.py  utils.py  views.py
core/consumers/: __init__.py  agent_consumer.py  client_consumer.py  groups.py
core/consumers/events/: __init__.py  broadcasting.py  db.py  handlers.py  mappers.py  typing.py  validation.py
core/management/commands/: ensure_superuser.py  healthcheck.py
core/migrations/: 0001_initial.py  0002_agent_ip_address_agent_registration_status.py  0003_service.py  0004_alter_agent_options_agent_is_online.py  0005_agentregistration.py  0006_remove_agentregistration_user.py  0007_alter_agent_name_alter_service_last_status.py  0008_agent_active_connections.py  0009_alter_agent_active_connections.py  0010_remove_agent_active_connections_agent_last_seen.py  0011_alter_agent_last_seen.py  0012_agent_current_channel_name.py  0013_remove_agent_current_channel_name_and_more.py  0014_add_agent_grace_period.py
dbbackup_admin/: README.md  admin.py  apps.py  models.py
dbbackup_admin/management/commands/: sync_backups.py
dbbackup_admin/migrations/: 0001_initial.py  0002_alter_backup_file_path.py  0003_alter_backup_options.py  0004_backup_label.py  0005_alter_backup_options_and_more.py  0006_backup_env.py  0007_remove_backup_completed_at.py
dbbackup_admin/templates/admin/dbbackup_admin/backup/: change_list.html  create_backup.html  restore_backup.html  sync_backups.html
dev_debug/: README.md  apps.py  consumers.py  middleware.py  routing.py  urls.py  views.py
dev_debug/templates/dev_debug/: agent_detail.html  agent_list.html  base.html
docs/: authentication.md  manifest.json  self-hosting.md
notifications/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_alter_device_token.py
project/: asgi.py  log.py  settings.py  urls.py
