[project]
name = "ssi-backend"
version = "0.1.0"
description = "The Backend of the Service Status Indicator monitoring framework"
authors = [
    {name = "RemiZlatinis",email = "remizlatinis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.6,<6.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "project"}]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.13.0"
django-debug-toolbar = "^6.0.0"
pre-commit = "^3.8.0"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
# Set the same line length as Black to ensure they agree.
line-length = 88

[tool.ruff.lint]
# Enable a good set of default rules, plus Django-specific ones.
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort (import sorting)
    "DJ", # django-specific rules
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
